--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -17,7 +17,7 @@ Projects
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 20px;
+    margin: 20px 20px 4em 20px;
     h1 {
       font-size: 3rem;
       font-weight: 900;
