--- a/src/index.scss
+++ b/src/index.scss
@@ -44,6 +44,12 @@ body {
   background-image: url("./assets/layered-waves-haikei.svg");
 }
 
+.spacer2 {
+  aspect-ratio: 900/200;
+  width: 100%;
+  background-image: linear-gradient(-5deg, $snowStorm1 50%, $polarNight4 50%);
+}
+
 /* 
 -------------
 Media queries
